--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             <p>A simple quote generator built using React</p>
         </div>
     </a></div>
+    <div class="project-box"><a href="https://www.figma.com/design/3YtQpLQ9Y5assQ0uhUVgFn/Untitled?node-id=0-1&t=VquNWG1FvcUVE5ud-1" target="_blank" style="background-image:url('Screenshot\ 2025-01-26\ 221616.png');" class="project-link">
+            <div class="project-content">
+            <h3>Playlist Generatorr</h3>
+            <p>A simple playlist generator</p>
+        </div>
+    </a></div>
 
         </div>
         <!-- Add your projects here -->
