--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </a></div>
     <div class="project-box"><a href="https://www.figma.com/design/3YtQpLQ9Y5assQ0uhUVgFn/Untitled?node-id=0-1&t=VquNWG1FvcUVE5ud-1" target="_blank" style="background-image:url('Screenshot\ 2025-01-26\ 221616.png');" class="project-link">
             <div class="project-content">
-            <h3>Playlist Generatorr</h3>
+            <h3>Playlist Generator</h3>
             <p>A simple playlist generator</p>
         </div>
     </a></div>
@@ -69,7 +69,7 @@
 
     <!-- Resume Section -->
     <section id="resume">
-        <a href="CV official.pdf" target="_blank" download="Zarin_Maisha_CV">Download My Resume</a>
+        <a href="zarin_maisha_CV (3).pdf" target="_blank" download="Zarin_Maisha_CV">Download My Resume</a>
     </section>
         
 
