--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- About Me Section -->
     <section id="about-me">
         <h1>Hi I am Zarin Maisha!</h1>
-        <p>I am a student at Aalto University. I am currently a third year BSc student majoring in Digital Systems and Design, and minoring in Mathematics.</p>
+        <p>I am a student at Aalto University. I am currently a first year master's student majoring in Human-Computer Interacion. I have a Bachelor's degree from Aalto University in Science and Technology.</p>
     </section>
 
     <!-- Projects Section -->
